[#1571] security rel array wip
